--- a/tools/settings.json
+++ b/tools/settings.json
@@ -1,3 +1,4 @@
 {
-  "apiKey": "zFND1tdmpDzvWQfqyo8h2MhTkxblWy0objj7ictl2LE"
+  "hereApiKey": "fcTWGanSpMKDJsC4iLtAP2kNPmpQKIZ1EgFzNKemGh8",
+  "yandexApiKey": "36466476-3e5b-45c5-9182-664dc8031b80"
 }
