--- a/package.json
+++ b/package.json
@@ -17,12 +17,12 @@
     "@react-navigation/bottom-tabs": "^5.8.0",
     "@react-navigation/native": "^5.7.3",
     "axios": "^0.20.0",
-    "expo": "~38.0.8",
-    "expo-status-bar": "^1.0.2",
+    "expo": "^38.0.0",
+    "expo-status-bar": "^1.0.0",
     "immer": "^7.0.8",
     "prop-types": "^15.7.2",
-    "react": "~16.11.0",
-    "react-dom": "~16.11.0",
+    "react": "16.11.0",
+    "react-dom": "16.11.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-38.0.2.tar.gz",
     "react-native-geocoding": "^0.4.0",
     "react-native-geolocation-service": "^5.0.0",
@@ -39,7 +39,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "babel-preset-expo": "~8.1.0"
+    "babel-preset-expo": "^8.2.3"
   },
   "private": true,
   "bugs": {
