--- a/web-build/manifest.json
+++ b/web-build/manifest.json
@@ -6,5 +6,21 @@
   "short_name": "native-weather",
   "start_url": "/?utm_source=web_app_manifest",
   "orientation": "portrait",
-  "icons": []
+  "icons": [
+    {
+      "src": "/dnagafonov/native-weather/pwa/chrome-icon/chrome-icon-144.png",
+      "sizes": "144x144",
+      "type": "image/png"
+    },
+    {
+      "src": "/dnagafonov/native-weather/pwa/chrome-icon/chrome-icon-192.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "/dnagafonov/native-weather/pwa/chrome-icon/chrome-icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
+  ]
 }
