--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web",
-    "eject": "expo eject"
+    "eject": "expo eject",
+    "deploy": "gh-pages -d web-build",
+    "predeploy": "expo build:web"
   },
   "repository": {
     "type": "git",
@@ -39,11 +41,12 @@
   },
   "devDependencies": {
     "@babel/core": "^7.8.6",
-    "babel-preset-expo": "^8.2.3"
+    "babel-preset-expo": "^8.2.3",
+    "gh-pages": "^3.1.0"
   },
   "private": true,
   "bugs": {
     "url": "https://github.com/dnagafonov/native-weather/issues"
   },
-  "homepage": "https://github.com/dnagafonov/native-weather#readme"
+  "homepage": ""
 }
