--- a/tools/settings.json
+++ b/tools/settings.json
@@ -1,4 +1,3 @@
 {
-  "hereApiKey": "fcTWGanSpMKDJsC4iLtAP2kNPmpQKIZ1EgFzNKemGh8",
-  "yandexApiKey": "36466476-3e5b-45c5-9182-664dc8031b80"
+  "hereApiKey": "fcTWGanSpMKDJsC4iLtAP2kNPmpQKIZ1EgFzNKemGh8"
 }
